added trusted plugin architecture